--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.0.1",
     "react-magic-motion": "^1.1.2",
     "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
