--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.0.14",
+    "lucide": "^0.372.0",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
     "react-magic-motion": "^1.1.2",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
